2009-11-23  GatoLoko  <GatoLoko@gmail.com>

 * auxiliar.py: sustituido el uso de ConfigParser.ConfigParser por
   ConfigParser.SafeConfigParser, que es mas recomendable (requiere python 2.3
   o superior).
 * auxiliar.py: simplificada la funcion unidades.
 * auxiliar.py: agregada la funcion kbtemporal_cb que fue eliminada durante la
   modularizacion del script.
 * autosend.py: modificados varios mensajes para hacerlos mas genericos y
   correctos.
 * gatoscript.conf: cambiado el disparador para el autoenvio.
 * rss.py: eliminado un antiguo mensaje de depuración.
 * gatoscript.py: modificado el uso de la funcion print para que sea compatible
   con las futuras versiones de python.
 * gatoscript.db: agregados algunos filtros.

2009-10-10  GatoLoko  <GatoLoko@gmail.com>

 * protecciones.py: modificada la funcion anti_colores_cb para que
   pueda ignorar los mensajes que contienen color de forma opcional.
 * gatoscript.conf: renombrada la opcion "colores" a "banea_colores" y
   agregada la opcion "ignora_colores".
 * gatoscript.conf: eliminadas algunas opciones obsoletas.
 * Eliminadas las versiones propias de cada modulo.
 * remotos.py: empezada la revision del codigo para que trabaje como modulo.
 * auxiliar.py: cambiada la version del script para publicarlo como 0.80.
 * gatoscript.db: agregados algunos filtros antispam.
 * gatoscript.py: cambiada la version para publicarlo como 0.80.
 * gatoscript.py: eliminadas algunas variables innecesarias.

2009-10-03  GatoLoko  <GatoLoko@gmail.com>

 * protecciones.py: agregada la funcion anti_drone_cb para deteccion y expulsion
   de Drones publicitarios.
 * protecciones.py: limpieza general del modulo.

2009-10-03  GatoLoko  <GatoLoko@gmail.com>

 * remotos.py: Arreglada la cabecera del archivo.

2009-10-03  GatoLoko  <GatoLoko@gmail.com>

 * auxiliar.py: agregada funcion para pasar bytes a su multiplo mas legible.
 * p2p.py: simplificada la funcion amule_cb utilizando la nueva funcion