@@ -5,6 +5,8 @@ whois = 1
 colorrealze = 7
 
 [protecciones]
+clonerx = 1
+drones = 1
 hoygan = 1
 spambots = 1
 botmensaje = Esto es un sistema anti bots. No me contestes si no eres un bot.
@@ -12,6 +14,7 @@ spam = 1
 awaystr = autoaway,está ausente,Auto-away,\(Log:Pager\) desde el,is away:
 canales = #ubuntu,#gatoscript
 ctcps = 1
+notices = 1
 mayusculas = 1
 banea_colores = 0
 ignora_colores = 1
